[edit] fix swiper support for ie and old androids to stop breaking react page

--- a/prepros.config
+++ b/prepros.config
@@ -4,7 +4,7 @@
   "config": {
     "proxy": {
       "enable": true,
-      "target": "http://localhost:9000",
+      "target": "http://localhost:3123",
       "useLocalAssets": false
     },
     "reload": {
@@ -104,7 +104,8 @@
             "options": {
               "targets": [
                 "> 2%",
-                "not dead"
+                "not dead",
+                "ie >= 9"
               ],
               "preserveImports": false
             }
@@ -910,8 +911,20 @@
         }
       },
       {
+        "file": "assets/components/pages/TopContent.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "assets/core/Index.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "assets\\js\\Index-dist.js",
           "tasks": {
             "babel": {
               "enable": true
@@ -919,10 +932,7 @@
             "bundle-js": {
               "enable": true
             }
-          },
-          "customOutput": "assets\\js\\Index-dist.js",
-          "autoCompile": true,
-          "sourceMap": true
+          }
         }
       },
       {
