[edit] edit content

--- a/prepros.config
+++ b/prepros.config
@@ -114,7 +114,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
-          "@babel/plugin-proposal-class-properties": false,
+          "@babel/plugin-proposal-class-properties": true,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
             "options": {
